CREATE TABLE IF NOT EXISTS cliente (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome varchar(120) NOT NULL,
    email varchar(160) NOT NULL UNIQUE,
    cidade varchar(80) NOT NULL,
    criado_em date NOT NULL
);

CREATE TABLE IF NOT EXISTS categoria (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome varchar(80) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS produto (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    categoria_id integer NOT NULL REFERENCES categoria (id),
    nome varchar(120) NOT NULL,
    preco numeric(12, 2) NOT NULL CHECK (preco >= 0)
);

CREATE TABLE IF NOT EXISTS pedido (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cliente_id integer NOT NULL REFERENCES cliente (id),
    data_pedido timestamp NOT NULL,
    status varchar(30) NOT NULL CHECK (status IN ('criado', 'pago', 'enviado', 'entregue', 'cancelado'))
);

CREATE TABLE IF NOT EXISTS item_pedido (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id integer NOT NULL REFERENCES pedido (id) ON DELETE CASCADE,
    produto_id integer NOT NULL REFERENCES produto (id),
    quantidade integer NOT NULL CHECK (quantidade > 0),
    preco_unitario numeric(12, 2) NOT NULL CHECK (preco_unitario >= 0)
);

CREATE TABLE IF NOT EXISTS pagamento (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id integer NOT NULL UNIQUE REFERENCES pedido (id) ON DELETE CASCADE,
    metodo varchar(30) NOT NULL CHECK (metodo IN ('cartao_credito', 'pix', 'boleto')),
    status varchar(30) NOT NULL CHECK (status IN ('pendente', 'aprovado', 'recusado', 'estornado')),
    valor numeric(12, 2) NOT NULL CHECK (valor >= 0),
    atualizado_em timestamp NOT NULL
);

CREATE TABLE IF NOT EXISTS entregador (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome varchar(120) NOT NULL,
    regiao varchar(80) NOT NULL
);

CREATE TABLE IF NOT EXISTS entrega (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id integer NOT NULL UNIQUE REFERENCES pedido (id) ON DELETE CASCADE,
    entregador_id integer NOT NULL REFERENCES entregador (id),
    status varchar(30) NOT NULL CHECK (status IN ('aguardando', 'em_rota', 'entregue', 'falhou')),
    despachado_em timestamp
);
